--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && gulp",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -42,7 +42,6 @@
     "gulp-concat": "^2.6.1",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
-    "material-table": "^1.55.0",
     "react-tabs": "^3.0.0"
   }
 }
