--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&set PORT=443&&react-scripts start",
     "build": "react-scripts build && gulp",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,6 +34,9 @@
   "devDependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
+    "@pnp/graph": "^2.0.2",
+    "@pnp/sp": "^2.0.2",
+    "axios": "^0.19.2",
     "datatables.net": "^1.10.20",
     "datatables.net-buttons": "^1.6.1",
     "datatables.net-editor": "^1.6.5",
