--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "moment": "^2.24.0",
+    "mutation-observer": "^1.0.3",
     "react-icons": "^3.9.0",
     "react-moment": "^0.9.7",
     "react-tabs": "^3.1.0",
