--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-concat": "^2.6.1",
     "moment": "^2.24.0",
     "mutation-observer": "^1.0.3",
+    "react-device-detect": "^1.13.1",
     "react-icons": "^3.9.0",
     "react-moment": "^0.9.7",
     "react-tabs": "^3.1.0",
