--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.8",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/user-event": "^7.2.1",
-    "material-table": "^1.57.2",
-    "moment": "^2.24.0",
+    "citz-imb-sp-utilities": "^1.3.0",
+    "material-table": "^1.69.0",
+    "moment": "^2.27.0",
     "mui-rte": "^1.24.0",
     "mutation-observer": "^1.0.3",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
-    "react-icons": "^3.9.0",
+    "react-icons": "^3.11.0",
     "react-moment": "^0.9.7",
     "react-scripts": "^3.4.3",
-    "react-tabs": "^3.1.0",
+    "react-tabs": "^3.1.1",
     "react-toastify": "^5.5.0"
   },
   "scripts": {
@@ -48,10 +48,13 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^5.1.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "concurrently": "^5.3.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
-    "sp-rest-proxy": "^2.11.0"
+    "react-test-render": "^1.1.2",
+    "sp-rest-proxy": "^2.11.1"
   },
   "proxy": "http://localhost:8081"
 }
