--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/user-event": "^7.2.1",
-    "citz-imb-sp-utilities": "^1.3.0",
+    "citz-imb-sp-utilities": "^1.3.2",
+    "draft-js": "^0.11.7",
     "material-table": "^1.69.0",
-    "moment": "^2.27.0",
-    "mui-rte": "^1.24.0",
+    "moment": "^2.28.0",
     "mutation-observer": "^1.0.3",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
