--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "material-table": "^1.69.0",
     "moment": "^2.28.0",
     "mutation-observer": "^1.0.3",
+    "notistack": "^1.0.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-device-detect": "^1.13.1",
