--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "citz-imb-sp-utilities": "^1.3.2",
     "draft-js": "^0.11.7",
     "formik": "^2.2.1",
+    "interweave": "^12.5.0",
     "material-table": "^1.69.0",
     "moment": "^2.28.0",
     "mutation-observer": "^1.0.3",
