--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^3.11.0",
     "react-moment": "^0.9.7",
     "react-scripts": "^3.4.3",
+    "react-table": "^7.6.1",
     "react-tabs": "^3.1.1",
     "react-toastify": "^5.5.0",
     "yup": "^0.29.3"
