--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/data-grid": "^4.0.0-alpha.10",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/user-event": "^7.2.1",
@@ -22,8 +23,10 @@
     "react-icons": "^3.11.0",
     "react-moment": "^0.9.7",
     "react-scripts": "^3.4.3",
+    "react-table": "^7.6.1",
     "react-tabs": "^3.1.1",
     "react-toastify": "^5.5.0",
+    "universal-cookie": "^4.0.4",
     "yup": "^0.29.3"
   },
   "scripts": {
