--- a/package.json
+++ b/package.json
@@ -3,28 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/data-grid": "^4.0.0-alpha.10",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.18",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/user-event": "^7.2.1",
     "citz-imb-sp-utilities": "^1.3.2",
     "draft-js": "^0.11.7",
-    "formik": "^2.2.1",
-    "interweave": "^12.5.0",
-    "material-table": "^1.69.0",
-    "moment": "^2.28.0",
+    "formik": "^2.2.6",
+    "interweave": "^12.7.0",
+    "material-table": "^1.69.2",
+    "moment": "^2.29.1",
     "mutation-observer": "^1.0.3",
-    "notistack": "^1.0.0",
-    "react": "^16.13.1",
+    "notistack": "^1.0.3",
+    "react": "^16.14.0",
     "react-app-polyfill": "^1.0.6",
-    "react-device-detect": "^1.13.1",
-    "react-dom": "^16.13.1",
+    "react-device-detect": "^1.15.0",
+    "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-moment": "^0.9.7",
-    "react-scripts": "^3.4.3",
-    "react-table": "^7.6.1",
-    "react-tabs": "^3.1.1",
+    "react-query": "^3.7.1",
+    "react-scripts": "^3.4.4",
+    "react-table": "^7.6.3",
+    "react-tabs": "^3.1.2",
     "react-toastify": "^5.5.0",
     "universal-cookie": "^4.0.4",
     "yup": "^0.29.3"
@@ -60,6 +61,7 @@
     "concurrently": "^5.3.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "react-query-devtools": "^2.6.3",
     "react-test-render": "^1.1.2",
     "sp-rest-proxy": "^2.11.1"
   },
