--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "concurrently": "^5.3.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "jquery": "^3.5.1",
     "react-query-devtools": "^2.6.3",
     "react-test-render": "^1.1.2",
     "sp-rest-proxy": "^2.11.1"
