--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-device-detect": "^1.15.0",
     "react-dom": "^16.14.0",
+    "react-dropzone": "^11.3.1",
     "react-icons": "^3.11.0",
     "react-moment": "^0.9.7",
     "react-query": "^3.7.1",
@@ -61,6 +62,7 @@
     "concurrently": "^5.3.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "jquery": "^3.5.1",
     "react-query-devtools": "^2.6.3",
     "react-test-render": "^1.1.2",
     "sp-rest-proxy": "^2.11.1"
