--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
-	"compilerOptions": {
-		"baseUrl": "src"
-	},
-	"include": ["src"]
+  "compilerOptions": {
+    "baseUrl": "src"
+  },
+  "include": ["src", "archive/20210518/SPLibrary"]
 }
